--- a/index.html
+++ b/index.html
@@ -70,10 +70,9 @@
                     </div>
                     <div class="socical_icons">
                         <div class="icon_circle"></div>
-                        <div class="icon"><i class="uil uil-instagram"></i></div>
-                        <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
-                        <div class="icon"><i class="uil uil-behance-alt"></i></div>
-                        <div class="icon"><i class="uil uil-github-alt"></i></div>
+                        <div class="icon"><a href="https://www.instagram.com/glngggg_250?igsh=MnlkZ3Z2djNraTBo"><i class="uil uil-instagram"></i></a></div>
+                        <div class="icon"><a href="https://www.linkedin.com/in/gilang-ega-bagaswara"><i class="uil uil-linkedin-alt"></i></a></div>
+                        <div class="icon"><a href="https://github.com/gilangegabagaswaracuyy"><i class="uil uil-github-alt"></i></a></div>
                     </div>
                 </div>
                 <div class="featured-image">
@@ -220,10 +219,9 @@
                 </ul>
             </div>
             <div class="footer-social-icons">
-                <div class="icon"><i class="uil uil-instagram"></i></div>
-                <div class="icon"><i class="fa-brands fa-linkedin-in icon"></i></div>
-                <div class="icon"><i class="uil uil-behance-alt"></i></div>
-                <div class="icon"><i class="uil uil-github-alt"></i></div>
+                <div class="icon"><a href="https://www.instagram.com/glngggg_250?igsh=MnlkZ3Z2djNraTBo"><i class="uil uil-instagram"></i></a></div>
+                <div class="icon"><a href="https://www.linkedin.com/in/gilang-ega-bagaswara"><i class="uil uil-linkedin-alt"></i></a></div>
+                <div class="icon"><a href="https://github.com/gilangegabagaswaracuyy"><i class="uil uil-github-alt"></i></a></div>
             </div>
             <div class="bottom-footer">
                 <p>Copyright &copy; <a href="#home" style="text-decoration: none;">GilangCreators</a> - All rights reserved 2024</p>
