--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <nav id="header">
             <div class="nav-logo">
-                <p class="nav-name">Logo</p>
+                <p class="nav-name">Gilang</p>
             </div>
             <div class="nav-menu" id="myNavMenu">
                 <ul class="nav_menu_list">
@@ -66,8 +66,8 @@
                     </div>
                     <div class="text-btn">
                         <button class="btn hire-btn">Hire Me</button>
-                        <button class="btn">Download CV<i class="uil uil-file"></i></button>
-                    </div>
+                        <a href="image/cv-gilang.pdf" class="btn" download="cv-gilang.pdf">Download CV </a>
+                    </div>                    
                     <div class="socical_icons">
                         <div class="icon_circle"></div>
                         <div class="icon"><a href="https://www.instagram.com/glngggg_250?igsh=MnlkZ3Z2djNraTBo"><i class="uil uil-instagram"></i></a></div>
